[package]
name = "aincrad-api-error"
version = "0.1.0"
edition = "2021"
authors = ["Opeyemi Akinnawo <ope.akinnawo@gmail.com>"]
license = "UNLICENSED"
description = "Standard Axum API error type with JSON responses"

[dependencies]
axum       = { version = "0.8", default-features = false, features = ["json"] }
sqlx       = { version = "0.8", default-features = false }
anyhow     = "1"
serde_json = "1"
tracing    = "0.1"
